Fixed spacing, added dummy element under top bar!

--- a/res/app.component.css
+++ b/res/app.component.css
@@ -1,16 +1,14 @@
 #wrapper {
 	margin: 0 auto;
 }
-list-style-type: none;
-}
 
 #content {
 	background: #fff;
 	box-shadow: 0 0 5px rgba(0,0,0,0.3);
 }
-.container-fluid{
-	display: inline-block;
-}
+
 .fixed {
-	position:fixed;
+	position: fixed;
+    top: 0;
+    z-index: 1000;
 }
