--- a/res/search.css
+++ b/res/search.css
@@ -1,45 +1,11 @@
-body{
-  background: #343d46;
-}
 .searchform{
-	width: 100px;
-  vertical-align: middle;
-  white-space: nowrap;
-  position: relative;
+    vertical-align: middle;
+    white-space: nowrap;
+    position: relative;
 }
-.searchform input#search{
-	width: 150px;
-  height: 40px;
-  background: #ffffff;
-  border: none;
-  font-size: 10pt;
-  float: left;
-  color: #63717f;
-  padding-left: 45px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-.searchform input#search::-webkit-input-placeholder {
-   color: #65737e;
-}
- 
-.searchform input#search:-moz-placeholder { /* Firefox 18- */
-   color: #65737e;  
-}
- 
-.searchform input#search::-moz-placeholder {  /* Firefox 19+ */
-   color: #65737e;  
-}
- 
-.searchform input#search:-ms-input-placeholder {  
-   color: #65737e;  
+.searchform .search{
+    display: inline-block;
 }
 .searchform .icon{
-  position: absolute;
-  top: 50%;
-  margin-left: 15px;
-  margin-top: 10px;
-  z-index: 1;
-  color: #4f5b66;
+    color: #4f5b66;
 }
